<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:title="@string/settings_recent_earthquakes_label"
        android:key="@string/settings_recent_earthquakes_key"
        android:defaultValue="@string/settings_recent_earthquakes_default"
        android:inputType="number"
        android:maxLength="3"/>

    <EditTextPreference
        android:defaultValue="@string/settings_min_magnitude_default"
        android:inputType="numberDecimal"
        android:key="@string/settings_min_magnitude_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_min_magnitude_label" />

    <ListPreference
        android:defaultValue="0"
        android:title="@string/settings_order_by_label"
        android:key="@string/settings_order_by_key"
        android:entries="@array/order_by_entries"
        android:entryValues="@array/order_by_entries_data"/>

</PreferenceScreen>